# moto-auto

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  flake.nix  schema.sql  test.sql
migrations/: 0001_initial_schema.sql  schema.sql
src/: main.rs  models.rs
src/database/: branch.rs  branch_crud.rs  branch_employee.rs  client.rs  crud.rs  employee.rs  employee_crud.rs  mod.rs  models.rs  order_service.rs  order_service_part.rs  orders.rs  schedule.rs  service.rs  service_branch.rs  spare_part.rs  spare_part_branch.rs  user.rs  user_crud.rs
src/web/: middlewares.rs  mod.rs
src/web/api/: common.rs  handlers.rs  mod.rs
src/web/front/: handlers.rs  mod.rs  views.rs
src/web/session/: mod.rs
templates/: login.html
templates/admin/: user_edit.html  user_list.html
templates/analyst/: base.html
templates/manager/: base.html  order_edit.html  order_list.html
templates/master/: base.html  header.html  order_list.html  order_view.html
